made a few last minute changes to the yaml and re-generated
